# DOI2BibTex

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  INSTALL.md  MANIFEST.in  PUBLICATION_SUMMARY.md  PYPI_PUBLISHING_GUIDE.md  README  README.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES_V3.md  UPGRADE_PLAN.md  api_server.py  cli.py  docker-compose.yml  example_dois.txt  py.typed  pyproject.toml  requirements-dev.txt  requirements-performance.txt  requirements-test.txt  requirements.txt  run_tests.py  streamlit_app.py  streamlit_app_v2.py  test_fixes.py  test_refactored.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
.streamlit/: config.toml
core/: __init__.py  analytics.py  async_processor.py  cache.py  cite_styles.py  config.py  database.py  dedupe.py  doi.py  exceptions.py  export.py  http.py  keys.py  logging_config.py  processor.py  state.py  types.py
old_v1/: README.md  streamlit_app_v2.py
tests/: conftest.py  test_api.py  test_cite_styles.py  test_cli.py  test_config.py  test_database.py  test_dedupe.py  test_doi.py  test_export.py  test_keys.py  test_performance.py  test_processor.py  test_state.py
